# CLIManager

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  cc-switch-ref-notes-zh.md  icloud-sync-root-cause-zh.md  package-lock.json  package.json  pnpm-lock.yaml
.claude/commands/: ship.md
.github/workflows/: release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v2.0-MILESTONE-AUDIT.md  v2.6-MILESTONE-AUDIT.md
.planning/debug/: 502-responses-api-proxy.md  settings-button-unclickable-after-update.md  streaming-token-null.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v2.0-MILESTONE-AUDIT.md  v2.0-REQUIREMENTS.md  v2.1-REQUIREMENTS.md  v2.1-ROADMAP.md  v2.2-REQUIREMENTS.md  v2.2-ROADMAP.md  v2.3-MILESTONE-AUDIT.md  v2.3-REQUIREMENTS.md  v2.3-ROADMAP.md  v2.4-MILESTONE-AUDIT.md  v2.4-REQUIREMENTS.md  v2.5-MILESTONE-AUDIT.md  v2.5-REQUIREMENTS.md  v2.5-ROADMAP.md  v2.6-MILESTONE-AUDIT.md  v2.6-REQUIREMENTS.md  v2.6-ROADMAP.md
.planning/phases/01-storage-and-data-model/: 01-01-SUMMARY.md  01-02-PLAN.md  01-CONTEXT.md
.planning/phases/02-surgical-patch-engine/: 02-01-PLAN.md  02-02-PLAN.md  02-02-SUMMARY.md  02-RESEARCH.md  02-VALIDATION.md
.planning/phases/03-provider-management-ui/: 03-02-SUMMARY.md  03-03-PLAN.md  03-04-PLAN.md  03-CONTEXT.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-icloud-sync-and-file-watching/: 04-01-PLAN.md  04-02-PLAN.md  04-VERIFICATION.md
.planning/phases/05-onboarding/: 05-01-PLAN.md  05-02-PLAN.md  05-RESEARCH.md
.planning/phases/06-tray-foundation/: 06-01-PLAN.md  06-01-SUMMARY.md
.planning/phases/07-provider-menu-and-switching/: 07-02-SUMMARY.md  07-CONTEXT.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/plans/: 2026-03-16-claude-global-settings-overlay-design.md  2026-03-20-redundant-page-titles-design.md  2026-03-20-redundant-page-titles.md  2026-03-25-codex-third-party-provider-design.md
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  provider.rs  tray.rs
src-tauri/src/adapter/: claude.rs  codex.rs  json_merge.rs  mod.rs
src-tauri/src/commands/: claude_settings.rs  mod.rs  onboarding.rs  provider.rs  proxy.rs  traffic.rs
src-tauri/src/proxy/: error.rs  handler.rs  mod.rs  server.rs  state.rs
src-tauri/src/proxy/translate/: mod.rs  request.rs  response.rs  responses_request.rs  responses_response.rs  responses_stream.rs  stream.rs
src-tauri/src/storage/: icloud.rs  local.rs  mod.rs
src-tauri/src/traffic/: db.rs  log.rs  mod.rs  rollup.rs  schema.rs
src-tauri/src/watcher/: mod.rs  self_write.rs
src/hooks/: useProviders.ts  useProxyStatus.ts  useSettings.ts  useSyncListener.ts  useTrafficLogs.ts  useTrafficStats.ts
src/lib/: tauri.ts
src/types/: provider.ts  settings.ts  traffic.ts
(+244 files in other folders)
