[package]
name = "cli-manager"
version = "0.2.8"
description = "Desktop app for managing AI CLI provider configurations"
authors = ["you"]
edition = "2021"

[lib]
name = "cli_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
toml_edit = "0.25"
reqwest = { version = "0.12", features = ["json", "stream"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tokio = { version = "1", features = ["net", "sync", "time"] }
notify = { version = "8", features = ["macos_fsevent"] }
notify-debouncer-mini = { version = "0.7", features = ["macos_fsevent"] }
bytes = "1"
futures = "0.3"
async-stream = "0.3"
rusqlite = { version = "0.38", features = ["bundled"] }
rusqlite_migration = "2.4"
tempfile = "3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3"

